--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-  <link rel="stylesheet" href="../css/style.css" />
-  <link rel="icon" href="../favicon.ico">
+  <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="./css/top.css" />
+  <link rel="icon" href="./favicon.ico">
   <title>カービィポータルのコピー</title>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 </head>
@@ -14,7 +15,7 @@
 <body>
   <header>
     <div class="container">
-      <h1 class="logo"><a href="../index.html"><img src="../media/logo.png" alt="ロゴです"></a></h1>
+      <h1 class="logo"><a href="./index.html"><img src="./media/logo.png" alt="ロゴです"></a></h1>
       <div class="hamburger-btn">
         <span></span>
         <span></span>
@@ -22,27 +23,31 @@
       </div>
       <nav class="gnav">
         <ul>
-          <li><a href="../index.html">トップ</a></li>
-          <li><a href="../news/index.html">ニュース</a></li>
-          <li><a href="../character/index.html">キャラクター</a></li>
-          <li><a href="../history/index.html">シリーズヒストリー</a></li>
-          <li><a href="../goods/index.html">グッズ</a></li>
-          <li><a href="../special/index.html">スペシャル</a></li>
-          <li><a href="../music/index.html">ミュージック</a></li>
+          <li><a href="./index.html">トップ</a></li>
+          <li><a href="./news/index.html">ニュース</a></li>
+          <li><a href="./character/index.html">キャラクター</a></li>
+          <li><a href="./history/index.html">シリーズヒストリー</a></li>
+          <li><a href="./goods/index.html">グッズ</a></li>
+          <li><a href="./special/index.html">スペシャル</a></li>
+          <li><a href="./music/index.html">ミュージック</a></li>
         </ul>
       </nav>
     </div>
   </header>
   <section>
     <div class="container">
-      <div class="blank"></div>
+      <section class="top-main-slider">
+        <div class="top-main-slider-img">
+
+        </div>
+      </section>
     </div>
   </section>
   <footer>
     <div class="container">
       <div class="footer_content">
         <div class="footer_banner">
-          <a href="https://kirbycafe.jp/"><img src="../media/banner_cook.png" alt="カフェサイトへ" class="footer_cafe"></a>
+          <a href="https://kirbycafe.jp/"><img src="./media/banner_cook.png" alt="カフェサイトへ" class="footer_cafe"></a>
           <div class="footer_twitter">
             <a href="https://twitter.com/twitterjp?lang=ja">
               <i class="fab fa-twitter"></i>
@@ -53,20 +58,20 @@
         <ul class="footer_nav_ul">
           <li><a href="https://www.nintendo.co.jp/"><i class="fas fa-external-link-alt"></i>おもちゃ屋さんホームページへ</a></li>
           <li><a href="https://www.hallab.co.jp/"><i class="fas fa-external-link-alt"></i>研究所ウェブサイトへ</a></li>
-          <li><a href="../about/index.html">このサイトについて</a></li>
-          <li><a href="../contact/index.html">お問い合わせ</a></li>
+          <li><a href="./about/index.html">このサイトについて</a></li>
+          <li><a href="./contact/index.html">お問い合わせ</a></li>
         </ul>
         <div class="footer_logos">
-          <img src="../media/logo.png" alt="ロゴです">
+          <img src="./media/logo.png" alt="ロゴです">
           <p class="footer-copyright">© copyright</p>
         </div>
       </div>
       <a href="#" class="footer_to_top">
-        <img src="../media/cannon.png" alt="トップに戻る大砲">
+        <img src="./media/cannon.png" alt="トップに戻る大砲">
       </a>
     </div>
   </footer>
-  <script src="../js/script.js"></script>
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
