--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 <body>
   <header>
+    <div class="container">
       <h1 class="logo"><a href="./index.html"><img src="./media/logo.png" alt="ロゴです"></a></h1>
       <div class="hamburger-btn">
         <span></span>
@@ -34,32 +35,34 @@
           <li><a href="./music/index.html">ミュージック</a></li>
         </ul>
       </nav>
+    </div>
   </header>
-      <section class="top-main-slider">
-          <div class="top-main-slider-items">
-            <a href="#">
-              <img src="media/top/keito.png" alt="毛糸のカービィ" class="top-main-slider-items-pc">
-              <img src="media/top/keito_sp.png" alt="毛糸のカービィ" class="top-main-slider-items-sp">
-            </a>
-            <a href="#">
-              <img src="media/top/sutaara.png" alt="スターアライズ" class="top-main-slider-items-pc">
-              <img src="media/top/sutaara_sp.png" alt="スターアライズ" class="top-main-slider-items-sp">
-            </a>
-            <a href="#">
-              <img src="media/top/ksa_ost.png" alt="オリジナルサウンドトラック" class="top-main-slider-items-pc">
-              <img src="media/top/ksa_ost_sp.png" alt="オリジナルサウンドトラック" class="top-main-slider-items-sp">
-            </a>
-            <a href="#">
-              <img src="media/top/cafe.png" alt="カービィカフェ" class="top-main-slider-items-pc">
-              <img src="media/top/cafe_sp.png" alt="カービィカフェ" class="top-main-slider-items-sp">
-            </a>
-            <a href="#">
-              <img src="media/top/battledx.png" alt="バトルデラックス" class="top-main-slider-items-pc">
-              <img src="media/top/battledx_sp.png" alt="バトルデラックス" class="top-main-slider-items-sp">
-            </a>
-          </div>
-      </section>
+  <section class="top-main-slider">
+    <div class="top-main-slider-items">
+      <a href="#">
+        <img src="media/top/keito.png" alt="毛糸のカービィ" class="top-main-slider-items-pc">
+        <img src="media/top/keito_sp.png" alt="毛糸のカービィ" class="top-main-slider-items-sp">
+      </a>
+      <a href="#">
+        <img src="media/top/sutaara.png" alt="スターアライズ" class="top-main-slider-items-pc">
+        <img src="media/top/sutaara_sp.png" alt="スターアライズ" class="top-main-slider-items-sp">
+      </a>
+      <a href="#">
+        <img src="media/top/ksa_ost.png" alt="オリジナルサウンドトラック" class="top-main-slider-items-pc">
+        <img src="media/top/ksa_ost_sp.png" alt="オリジナルサウンドトラック" class="top-main-slider-items-sp">
+      </a>
+      <a href="#">
+        <img src="media/top/cafe.png" alt="カービィカフェ" class="top-main-slider-items-pc">
+        <img src="media/top/cafe_sp.png" alt="カービィカフェ" class="top-main-slider-items-sp">
+      </a>
+      <a href="#">
+        <img src="media/top/battledx.png" alt="バトルデラックス" class="top-main-slider-items-pc">
+        <img src="media/top/battledx_sp.png" alt="バトルデラックス" class="top-main-slider-items-sp">
+      </a>
+    </div>
+  </section>
   <footer>
+    <div class="container">
       <div class="footer_content">
         <div class="footer_banner">
           <a href="https://kirbycafe.jp/"><img src="./media/banner_cook.png" alt="カフェサイトへ" class="footer_cafe"></a>
@@ -84,6 +87,7 @@
       <a href="#" class="footer_to_top">
         <img src="./media/cannon.png" alt="トップに戻る大砲">
       </a>
+    </div>
   </footer>
   <script src="./js/script.js"></script>
 </body>
